# pasture

./: .gitignore  .prettierignore  .prettierrc.mjs  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  eslint.config.js  package-lock.json  package.json
.github/workflows/: check.yml  release.yml
.husky/: pre-commit
apps/desktop/: .prettierignore  index.html  knip.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/.storybook/: main.ts  preview-head.html  preview.tsx
apps/desktop/src/: app-router.ts  index.css  renderer.tsx  routeTree.gen.ts  setupTests.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: codex-events.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons-dev/: icon.icns
apps/desktop/src-tauri/src/: codex_runtime.rs  env.rs  event_listener.rs  events.rs  lib.rs  main.rs  menu.rs  review_snapshots.rs  ts_export.rs  workspace_manager.rs
apps/desktop/src-tauri/src/commands/: approvals.rs  auth.rs  composer.rs  conversations.rs  initialize.rs  mod.rs  registry.rs  review.rs  runtime.rs  util.rs  workspace.rs
apps/desktop/src/approvals/: event-utils.ts  store.ts  types.ts
apps/desktop/src/auth/: useAuthState.ts
apps/desktop/src/codex.gen/: AddConversationListenerParams.ts  AddConversationSubscriptionResponse.ts  AgentMessageContent.ts  AgentMessageContentDeltaEvent.ts  AgentMessageDeltaEvent.ts  AgentMessageEvent.ts  AgentMessageItem.ts  AgentReasoningDeltaEvent.ts  AgentReasoningEvent.ts  (+143 more)
scripts/: fmt-staged-rust.sh  release.sh
(+171 files in other folders)
