[package]
name = "app"
version = "0.1.1"
description = "Pasture desktop GUI for Codex"
authors = ["Anthony Crognale"]
license = "Apache-2.0"
repository = ""
edition = "2024"
rust-version = "1.90"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-decorum = "1.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "fs",
] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.9"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "11", features = ["serde-json-impl"] }
urlencoding = "2"

# Codex dependencies
codex-core = { git = "https://github.com/openai/codex.git", tag = "rust-v0.61.0" }
codex-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.61.0" }
codex-apply-patch = { git = "https://github.com/openai/codex.git", tag = "rust-v0.61.0" }
codex-git = { git = "https://github.com/openai/codex.git", tag = "rust-v0.61.0" }

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "ts-export"
path = "src/bin/ts_export.rs"
